# devops-mcp

./: .env.example  .gitignore  LICENSE  Project.md  README.md  agent.py  anomaly_detection.py  approvals.py  claude_desktop_config.json  compliance.py  executor.py  false_positive_handler.py  fleet_routes.py  fleet_sync.py  health_metrics.py  mcp_registry.py  onboarding.py  poller.py  pyproject.toml  runbook_engine.py  server.py  ssh_client.py  uptime_checker.py  ws_hub.py
.cursor/commands/: phase-0-scaffold.md  phase-1-start.md  phase-2-start.md  phase-3-start.md  phase-4-start.md  verify-phase.md
.cursor/rules/: 00-project-core.mdc  dashboard-react.mdc  phases.mdc  python-backend.mdc
.github/workflows/: ci.yml
config/: repos.yaml.example  rules.yaml  rules.yaml.example  servers.yaml.example  terraform_rules.yaml.example
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  api.js  index.css  ws.js
dashboard/src/components/: ApprovalCard.jsx  ExecutionLog.jsx  HandoffSummary.jsx  IncidentDetail.jsx  IncidentFeed.jsx  (+5 more)
db/: schema.sql  store.py
models/: config.py  incident.py  server.py
tests/: conftest.py  test_agent.py  test_baseline_anomaly.py  test_cicd.py  test_compliance.py  test_executor.py  test_false_positive.py  test_fleet_routes.py  test_infrastructure.py  test_phase4_incident.py  test_runbook_engine.py  test_scaffold.py  test_setup_status.py  test_terraform_plan.py
tools/: cicd.py  compliance.py  executor.py  false_positive.py  incident.py  infrastructure.py  terraform.py
(+20 files in other folders)
