[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-agent"
version = "0.1.0"
description = "Autonomous DevOps AI agent with human-in-the-loop approval"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mcp~=1.0.0",
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.32.0",
    "paramiko~=3.4.0",
    "PyGithub~=2.3.0",
    "aiosqlite~=0.20.0",
    "anthropic~=0.28.0",
    "pyyaml~=6.0",
    "python-dotenv~=1.0.0",
    "pydantic~=2.8.0",
    "httpx~=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pytest-asyncio~=0.23.0",
    "pytest-timeout~=2.3.0",
    "responses~=0.25.0",
    "ruff~=0.4.0",
    "httpx~=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["db*", "models*", "tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
